--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(MiddleInsertion)
+project(BandwidthSaturationTest)
 
 add_executable(main main.cpp)
 set_property(TARGET main PROPERTY CXX_STANDARD 23)
 
 # Add the main executable as a test
 enable_testing()
-add_test(NAME MainTest COMMAND main 10000 1000)
+add_test(NAME MainTest COMMAND main 10)
